# operating-systems-course

./: .gitignore
exam/: README.md
labs/: .markdownlint.json
labs/01/: README.md
labs/02/: README.md
labs/03/: README.md
labs/03/filedesc-raii/: CMakeLists.txt
labs/03/filedesc-raii/src/: main.cpp
labs/04/: README.md
labs/04/measure-time/: CMakeLists.txt
labs/04/measure-time/src/: MeasureTime.h  main.cpp
labs/04/p03_sorter/: CMakeLists.txt
labs/04/p03_sorter/src/: main.cpp
labs/05/: README.md
labs/06/: README.md
labs/07/: README.md
labs/08/: README.md
labs/08/assets/: windows.drawio
labs/09/: README.md
labs/09/assets/: illustrations.drawio
labs/09/samples/01_echo-server/: CMakeLists.txt  linux.cpp
labs/10/: README.md
labs/10/assets/: dll-illustrations.drawio
labs/10/samples/dynamic_libs_linux/: build.sh  myapp
labs/10/samples/dynamic_libs_linux/app/: main.cpp
labs/10/samples/dynamic_libs_linux/libexample/include/: example.h
labs/10/samples/dynamic_libs_linux/libexample/src/: example.cpp
labs/10/samples/static-libs/: CMakeLists.txt
labs/10/samples/static-libs/app/: CMakeLists.txt  main.cpp
labs/10/samples/static-libs/math/: CMakeLists.txt  math_functions.cpp  math_functions.hpp
lectures/: DLL и EXE модули.pptx
